--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="xxx">
     <header class="h1cont">
         <h1 class="head">Background GENERATOR</h1>
-        <p id="man">Your Color Value is here!</p>
+        <p id="man">This is the Background!</p>
         <p>COPY AND PASTE TO USE</p>
     </header>
     
