reverting back to old title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body id="xxx">
     <header class="h1cont">
-        <h1 class="head">Background GENERATOR</h1>
+        <h1 class="head">COOL GENERATOR</h1>
         <p id="man">This is the Background!</p>
         <p>COPY AND PASTE TO USE</p>
     </header>
